Fixed drive spacing issue

--- a/src/devices/diskinterface.css
+++ b/src/devices/diskinterface.css
@@ -45,7 +45,7 @@ body.dark-mode .disk-cloud {
   height: 0.75em;
   cursor: pointer;
   padding-left: 0.025em;
-  padding-right: 0.5em;
+  padding-right: 0.25em;
   padding-top: 0.25em;
 }
 
